# BEP_Nedtrain_2014

./: .gitignore  README.md  WindowsProcedure.txt  flex_v2  gitignore  ideeen.txt  notities.txt
clp/: Makefile  constraints.cpp  constraints.h  example  example.cpp  flexibility.cpp  input_xpl.cpp  main.cpp  martijn.cpp  sample.txt
clp/sample/: sample_2.in  sample_2.out
clp/samples/: sample_1.in  sample_2.in
coin-Clp/.svn/: wc.db
coin-Clp/Osi/: configure.ac
db/: rep-cache.db  uuid
gui/: Makefile  gen_pro_files  gen_pro_files_static  headers.list  sources.list  tests.list
gui/application/: Doxyfile  Makefile  Resources.qrc  main.cpp
gui/testsuite/: Makefile  Resources.qrc  app_environment.cpp  fake-compiler  testsuite.cpp
instances/: demo-tight.instance  demo.instance  demoLock.instance  home_made1.instance  home_made2.instance  home_made3.instance  jaardienst.instance  policella.instance  small.instance  smallLock.instance  smallPolicella.instance  week.instance  xxl.instance  zelfgemaakt.instance
instances/j120/: j12010_1.instance  j12010_10.instance  j12010_2.instance  j12010_3.instance  j12010_4.instance  j12010_5.instance  j12010_6.instance  j12010_7.instance  j12010_8.instance  j12010_9.instance  j12011_1.instance  j12011_10.instance  j12011_2.instance  j12011_3.instance  j12011_4.instance  j12011_5.instance  j12011_6.instance  j12011_7.instance  j12011_8.instance  j12011_9.instance  j12012_1.instance  j12012_2.instance  j12012_3.instance  j12012_4.instance  j12012_5.instance  j12012_6.instance  j12012_7.instance  j12012_8.instance  j12012_9.instance  j12013_1.instance  j12013_10.instance  j12013_2.instance  j12013_3.instance  j12013_4.instance  j12013_5.instance  j12013_6.instance  j12013_7.instance  j12013_8.instance  j12013_9.instance  j12014_1.instance  (+556 more)
instances/j30/: j3010_1.instance  j3010_10.instance  j3010_2.instance  j3010_3.instance  j3010_4.instance  j3010_5.instance  j3010_6.instance  j3010_7.instance  j3010_8.instance  j3010_9.instance  j3011_1.instance  j3011_10.instance  j3011_2.instance  (+466 more)
logboek/: anton.md  chris.md  martijn.md
presentatie/: beamerouterthemetud.sty  presentation.tex  presentation.vrb
python_scripts/: dc.py  simulate.py
solver/: Makefile  chaining.cpp  chaining.h  coverage  esta_plus.cpp  flexibility.cpp  grammar.output  lex.cpp  lex.l  main.cpp  solver  stjn.cpp  stjn.h
solver/testsuite/: CMakeLists.txt  Makefile  Project.cbp  constraints_test.cpp  flexibility_test.cpp  testsuite.cbp  testsuite.cpp
solver/testsuite/tests/: chaining_test.cpp  constraints_test.cpp  flexibility_test.cpp  instance_test.cpp  tmsp_test.cpp
solver/testsuite/tests/ExpectedSolutions/: small.txt
tms/: .hgignore  Makefile  alles.h  debug.cpp  debug.h  esta_plus.cpp  esta_plus.h  lex.cpp  lex.l  main.cpp  stjn.cpp  stjn.h  timing.cpp  timing.h  tms  token.cpp  token.h
verslag/: References.bib  references.bib  settings.tex  verslag.tex
(+3010 files in other folders)
